Aggiunto stile alla pagina

--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="logo margin">
+        <img src="img/logo.png" alt="Logo">
+    </div>
+    <h1 class="margin">Entra in Boolean.</h1>
+    <div class="entra-boolean">
+        <h2 class="margin">Elenco degli studenti iscritti alla classe 41: <br></h2>
+        <div class="classe-41">
+            <p id="iscritti" class="margin"></p>
+            <div class="boolean">
+                <img src="img/boolean.png" alt="Boolean">
+            </div>
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
