--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studenti</title>
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +15,9 @@
     <div class="logo margin">
         <img src="img/logo.png" alt="Logo">
     </div>
-    <h1 class="margin">Entra in Boolean.</h1>
+    <h1 class="margin">Cambia la tua vita. <br> Entra in Boolean.</h1>
     <div class="entra-boolean">
-        <h2 class="margin">Elenco degli studenti iscritti alla classe 41: <br></h2>
+        <h2 class="margin">Elenco degli studenti iscritti alla classe 41</h2>
         <div class="classe-41">
             <p id="iscritti" class="margin"></p>
             <div class="boolean">
